content/consul/v1.8.x/content/commands/acl/role/delete.mdx
---
layout: commands
page_title: 'Commands: ACL Role Delete'
sidebar_title: delete
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-11-04T10:42:51-06:00
# END AUTO GENERATED METADATA
---

# Consul ACL Role Delete

Command: `consul acl role delete`

The `acl role delete` command deletes a role. Roles may be deleted by their ID or by name.

## Usage

Usage: `consul acl role delete [options]`

#### API Options

@include 'http_api_options_client.mdx'

@include 'http_api_options_server.mdx'

#### Command Options

- `-id=<string>` - The ID of the role to delete. It may be specified as a
  unique ID prefix but will error if the prefix matches multiple role IDs.

- `-name=<string>` - The Name of the role to delete.

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

## Examples

Delete a role by prefix:

```shell-session
$ consul acl role delete -id 57147
Role "57147d87-6bf7-f794-1a6e-7d038c4e4ae9" deleted successfully
```

Delete a role by name:

```shell-session
$ consul acl role delete -name crawler
Role "a365fdc9-ac71-e754-0645-7ab6bd747301" deleted successfully
```
